Extract the partition in multi-resolution senario

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,14 @@ deploy
 /out/
 .project
 .cproject
+.vcxproj
+.filters
+/source/APP
+.cmake
+/source/Lib/vvenc/CMakeFiles/
+/source/App/vvencFFapp/CMakeFiles/
+/test/
+/vvenc/
+/CMakeFiles/
+.pc
+
